# SpriteBaker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.MIT  README.md  run_task.sh
res/: baked_image.json  baked_image_trimmed.json  cat-bump.sprite  cat-jump.sprite  cat-stand.sprite  cat-turn.sprite  cat-walk.sprite
scripts/: deploy.py
src/: main.cpp
